# GameEngineV1

./: CMakeLists.txt  README.md
include/ankerl/: unordered_dense.h
include/glad/: glad.h
src/: glad.c  main.cpp
src/ECS/: API.cpp  API.h  ecsEngine.cpp  ecsEngine.h
src/ECS/Component/: archetype.cpp  archetype.h  component.h  componentArray.cpp  componentArray.h
src/ECS/Entity/: entity.cpp  entity.h
src/ECS/Managers/: componentManager.cpp  componentManager.h  entityManager.cpp  entityManager.h  systemManager.cpp  systemManager.h
src/ECS/System/: system.h
src/GameEngine/: gameEngine.cpp  gameEngine.h
src/GameEngine/Component/: componentList.h
src/GameEngine/Core/: Core.h
src/GameEngine/Core/Window/: window.cpp  window.h
src/GameEngine/System/: systemList.h  worldGenSystem.cpp  worldGenSystem.h
src/RenderEngine/Core/: camera.cpp  camera.h  mesh.cpp  mesh.h  shader.h
src/RenderEngine/Core/shaderFiles/: vertShader.vs.glsl
src/RenderEngine/System/: meshBuilderSystem.cpp  meshBuilderSystem.h  renderSystem.cpp  renderSystem.h
src/Utility/: logger.cpp  logger.h  typeIDGenerator.cpp  typeIDGenerator.h
